baml_language/crates/baml_tests/snapshots/diagnostic_errors/patterns_class_destructure/baml_tests__diagnostic_errors__patterns_class_destructure__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 53641
---
=== PPIR ===
class user.Address {
  zip: int
}
class user.Address$stream {
  zip: int | null
}
class user.Admin {
  age: string
}
class user.Admin$stream {
  age: string | null
}
class user.Box {
  value: T
}
class user.Box$stream {
  value: T | null
}
class user.OptionalPerson {
  age: int?
}
class user.OptionalPerson$stream {
  age: int | null
}
class user.Person {
  age: int
  flexible_age: int | string
  address: user.Address
}
class user.Person$stream {
  age: int | null
  flexible_age: int | string | null
  address: user.Address$stream | null
}
class user.SameNameInner {
  field: int
}
class user.SameNameInner$stream {
  field: int | null
}
class user.SameNameOuter {
  field: user.SameNameInner
  other: user.SameNameInner
}
class user.SameNameOuter$stream {
  field: user.SameNameInner$stream | null
  other: user.SameNameInner$stream | null
}
function user.class_destructure_box(boxed: user.Box<int>) -> int  [expr] {
  { let Box<int> { value: value } = boxed } value
}
function user.class_destructure_duplicate_binding_name_across_fields() -> int  [expr] {
  { let Person { age: age, flexible_age: age } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 0
}
function user.class_destructure_duplicate_field_key_in_let() -> int  [expr] {
  { let Person { age: first, age: second } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } first Add second
}
function user.class_destructure_duplicate_field_key_with_wildcards() -> int  [expr] {
  {  } match (user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }) { Person { age: _, age: _ } => 1 }
}
function user.class_destructure_field_pattern_type_mismatch() -> int  [expr] {
  {  } match (user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }) { Person { age: string } => 1, _ => 0 }
}
function user.class_destructure_formatter_empty_and_trailing_comma_trivia() -> int  [expr] {
  { let input = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }; let Person {  } = input } match (input) { Person { age: years } => years }
}
function user.class_destructure_formatter_trivia_preserved() -> int  [expr] {
  { let input = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }; let Person { age: years, address: Address { zip: zip } } = input } years Add zip
}
function user.class_destructure_invalid_chain_type() -> int  [expr] {
  { let Person { age: age } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } age
}
function user.class_destructure_or_pattern_must_bind_same_names(v: user.Person | int) -> int  [expr] {
  {  } match (v) { Person { age: age } | int => age }
}
function user.class_destructure_or_pattern_same_binding_conflicting_types(v: user.Person | user.Admin) -> int  [expr] {
  {  } match (v) { Person { age: age } | Admin { age: age } => 1 }
}
function user.class_destructure_unknown_field_in_let() -> int  [expr] {
  { let Person { missing: missing } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 0
}
function user.class_destructure_unknown_renamed_field_span() -> int  [expr] {
  { let Person { missing: renamed } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } renamed
}
function user.class_destructure_unresolved_class() -> int  [expr] {
  { let MissingClass { age: age } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 0
}
function user.for_class_field_type_narrower_than_field_is_refutable() -> int  [expr] {
  { for Person { flexible_age: int } in [user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }] {  } 1 } 1
}
function user.for_top_level_class_narrows_union_element_is_refutable() -> int  [expr] {
  { for Person { age: age } in [user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }, 2] {  } age } 1
}
function user.generic_class_destructure_or_pattern_same_binding_conflicting_types(v: user.Box<int> | user.Box<string>) -> int  [expr] {
  {  } match (v) { Box<int> { value: value } | Box<string> { value: value } => 1 }
}
function user.generic_class_destructure_requires_type_args(boxed: user.Box<int>) -> int  [expr] {
  { let Box { value: value } = boxed } value
}
function user.generic_class_type_pattern_in_chain_requires_type_args(boxed: user.Box<int>) -> int  [expr] {
  {  } match (boxed) { value: user.Box => 1 }
}
function user.generic_class_type_pattern_requires_type_args(boxed: user.Box<int>) -> int  [expr] {
  {  } match (boxed) { user.Box => 1 }
}
function user.lambda_class_destructure_field_pattern_type_mismatch_span() -> int  [expr] {
  { let f: (user.Person) -> int throws never = (p: user.Person) -> int { { let Person { age: string } = p } 1 } } f(user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } })
}
function user.let_class_field_literal_narrower_than_field_is_refutable() -> int  [expr] {
  { let Person { age: 1 } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 1
}
function user.let_class_field_type_narrower_than_field_is_refutable() -> int  [expr] {
  { let Person { flexible_age: int } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 1
}
function user.let_generic_class_field_type_narrower_than_substituted_field_is_refutable() -> int  [expr] {
  { let boxed: user.Box<string> = user.Box { value: "ready" }; let Box<string> { value: int } = boxed } 1
}
function user.let_optional_class_field_narrower_than_field_is_refutable() -> int  [expr] {
  { let OptionalPerson { age: int } = user.OptionalPerson { age: 1 } } 1
}
function user.let_top_level_class_narrows_union_scrutinee_is_refutable(v: user.Person | int) -> int  [expr] {
  { let Person { age: age } = v } age
}
function user.match_class_destructure_unknown_field() -> int  [expr] {
  {  } match (user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }) { Person { missing: missing } => 1, _ => 0 }
}
function user.nested_class_destructure_duplicate_binding_name_across_nested_fields() -> int  [expr] {
  { let SameNameOuter { field: SameNameInner { field: field }, other: SameNameInner { field: field } } = user.SameNameOuter { field: user.SameNameInner { field: 1 }, other: user.SameNameInner { field: 2 } } } 0
}
function user.nested_class_destructure_duplicate_binding_name_in_field_chain() -> int  [expr] {
  { let SameNameOuter { field: field: SameNameInner { field: field } } = user.SameNameOuter { field: user.SameNameInner { field: 1 }, other: user.SameNameInner { field: 2 } } } 0
}
function user.nested_class_destructure_field_pattern_type_mismatch() -> int  [expr] {
  {  } match (user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } }) { Person { address: Address { zip: string } } => 1, _ => 0 }
}
function user.nested_class_destructure_unknown_field_in_let() -> int  [expr] {
  { let Person { address: Address { missing: missing } } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 0
}
function user.nested_class_field_type_narrower_than_field_is_refutable() -> int  [expr] {
  { let Person { address: Address { zip: 1 } } = user.Person { age: 1, flexible_age: 2, address: user.Address { zip: 3 } } } 1
}
function user.nested_generic_class_destructure_duplicate_binding_name() -> int  [expr] {
  { let boxed: user.Box<user.SameNameInner> = user.Box { value: user.SameNameInner { field: 1 } }; let Box<user.SameNameInner> { value: value: SameNameInner { field: value } } = boxed } 0
}
